# OMNI_AGENT

./: .gitignore  CNAME  README.md  index.html  scrape_and_email.py  start.sh  wrangler.jsonc
.github/workflows/: deploy.yml
assets/: index-BLmOZtb9.js  index-BsE8q_cf.js  index-By-_rgQW.js  index-BztpgM9h.css  index-C7KJW_wZ.css  index-C8VyH33c.css  index-CYPn_eYY.js  index-CjcRtkQV.js  index-CxA4jQ3U.css  index-DFsbbnvI.js  index-DSKAR4K6.css  index-Dy2UmkFf.js  index-FJU5zEag.css  index-v0yKPMEH.js
backend/: .env.example  Dockerfile  README.md  auth.py  config.py  google_auth.py  graph.py  keys.py  main.py  pyproject.toml  requirements.txt
backend/agents/: __init__.py  calendar_agent.py  code.py  data_agent.py  email_agent.py  file_agent.py  google_agents.py  research.py  scraper.py
backend/mcp/: __init__.py  browser_mcp.py  calendar_mcp.py  gdrive_mcp.py  gmail_mcp.py
backend/memory/: chroma.py
cli/: pyproject.toml
cli/omniagent/: __init__.py  cli.py
cli/omniagent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
extension/: background.js  manifest.json  sidepanel.html  sidepanel.js  styles.css
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentPanel.tsx  Chat.tsx  History.tsx  Settings.tsx
frontend/src/hooks/: useSSE.ts
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
